src/objects/Member_Affiliation__c.object
<CustomObject>
    <description>Junction between program and member</description>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Historical_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be set when historical messages is available for that account</description>
        <label>Historical_Message__c</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Affiliations</relationshipLabel>
        <relationshipName>Member_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; OwnerId, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <label>Population</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Population</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Offered__c</fullName>
        <formula>TEXT(Program__r.Program__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Offered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Member Affiliations</relationshipLabel>
        <relationshipName>Member_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Affiliation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Affiliation</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Affiliation</relationshipLabel>
        <relationshipName>Provider_Affiliation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Group</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2)</booleanFilter>
            <filterItems>
                <field>Account.IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Provider Group</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Affiliations (Provider Group)</relationshipLabel>
        <relationshipName>Provider_Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Member Affiliation</relationshipLabel>
        <relationshipName>Provider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscriber_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Subscriber Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Member Affiliation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owner_Name__c</columns>
        <columns>Member__c</columns>
        <columns>Provider_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Enrollment_Date__c</columns>
        <columns>Inactive_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Member_Affiliation_View</fullName>
        <columns>NAME</columns>
        <columns>Owner_Name__c</columns>
        <columns>Member__c</columns>
        <columns>Provider_Affiliation__c</columns>
        <columns>Member_ID__c</columns>
        <columns>Status__c</columns>
        <columns>Enrollment_Date__c</columns>
        <columns>Inactive_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Member Affiliation View</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Member Affiliation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Affiliations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>